hybridIDS: Add unit tests

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -48,3 +48,9 @@ pkg_check_modules(LIBNFTNL REQUIRED libnftnl)
 target_include_directories(hybridIDS PRIVATE ${LIBMNL_INCLUDE_DIRS} ${LIBNFTNL_INCLUDE_DIRS})
 target_link_libraries(hybridIDS PRIVATE ${LIBMNL_LIBRARIES} ${LIBNFTNL_LIBRARIES})
 target_compile_options(hybridIDS PRIVATE ${LIBMNL_CFLAGS_OTHER} ${LIBNFTNL_CFLAGS_OTHER})
+
+option(ENABLE_TESTS "Build unit tests" ON)
+if(ENABLE_TESTS)
+    enable_testing()
+    add_subdirectory(tests)
+endif()
